@@ -24,7 +24,6 @@
  * 	-	Resizing
  */
 
-#include "../src/config.h"
 #include "wconfig.h"
 #include "WINGsP.h"
 #include <math.h>
