@@ -1,3 +1,11 @@
+Changes since wmaker 0.70.0:
+............................
+
+- added an internal strcasecmp() (only on systems where is not present)
+- removed some redundant includes of ../src/config.h when wconfig.h is 
+  included too
+
+
 Changes since wmaker 0.65.0:
 ............................
 
